# iscore-addon-presetstate

./: CMakeLists.txt  iscore_addon_presetstate.cpp  iscore_addon_presetstate.hpp  score_addon_presetstate.cpp  score_addon_presetstate.hpp
PresetState/: Factory.hpp  Metadata.hpp  Model.cpp  Model.hpp  Preset.cpp  PresetStateLoader.cpp  PresetStateLoader.hpp
PresetState/Commands/: PresetStateCommandFactoryKey.cpp  PresetStateCommandFactoryKey.hpp  SetPresetFile.cpp  SetPresetFile.hpp
PresetState/Executor/: StateComponent.cpp  StateComponent.hpp
PresetState/Inspector/: Widget.cpp  Widget.hpp  WidgetFactory.cpp  WidgetFactory.hpp
